src/test/deca/context/valid/inheritance/inheritance_chain_2.deca
// Description :
//    Chaîne d'héritage de profondeur 2.
//
// Resultats :
//    OK

class A {
    int x;
}

class B extends A {
    int y;
}

class C extends B {
    int z;
}

{
}

